--- a/cypress/cypress.tsconfig.json
+++ b/cypress/cypress.tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "types": ["cypress"]
+  },
   "include": ["../node_modules/cypress", "./**/*.ts"]
 }
